--- a/app.html
+++ b/app.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header class="navbar navbar-expand-lg navbar-light" style="background-color: #343a40;">
+    <header class="navbar navbar-expand-lg navbar-light bg-dark">
         <a class="navbar-brand text-white" href="index.html">Телефонний Довідник</a>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link text-white" href="profile.html">Профіль</a></li>
@@ -20,35 +19,38 @@
         </ul>
     </header>
 
-    <!-- Main content -->
     <main class="container mt-5">
         <h2>Робоча сторінка додатка</h2>
         <div class="table-responsive">
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Прізвище</th>
+                        <th>Ім'я</th>
                         <th>Телефон</th>
+                        <th>Редагувати</th>
+                        <th>Видалити</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Іванов</td>
-                        <td>+380XXXXXXXXX</td>
-                    </tr>
-                    <tr>
-                        <td>Петров</td>
-                        <td>+380XXXXXXXXX</td>
-                    </tr>
-                </tbody>
+                <tbody id="contact-table"></tbody>
             </table>
+        </div>
+
+        <div class="mt-4 contact-form mx-auto">
+            <h5 class="text-center">Додати новий контакт</h5>
+            <input type="text" id="contact-name" class="form-control mt-2" placeholder="Введіть ім'я">
+            <input type="text" id="contact-phone" class="form-control mt-2"
+                placeholder="Введіть телефон (+380XXXXXXXXX)">
+            <button id="add-contact" class="btn btn-primary mt-2">Додати контакт</button>
+            <p id="error-message" class="text-danger mt-2 text-center" style="display:none;">Невірний формат номера!</p>
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-2">
+    <footer class="bg-dark text-white text-center py-2 mt-4">
         <p>&copy; 2025 Ваш помічник</p>
     </footer>
-</body>
 
-</html>
+        <script src="model.js"></script>
+        <script src="view.js"></script>
+        <script src="controller.js"></script>
+
+</body>
