--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вхід</title>
+    <title>Реєстрація</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -14,7 +14,6 @@
     <header class="navbar navbar-expand-lg navbar-light" style="background-color: #343a40;">
         <a class="navbar-brand text-white" href="index.html">Телефонний Довідник</a>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link text-white" href="profile.html">Профіль</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="login.html">Вхід</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="app.html">Додаток</a></li>
         </ul>
@@ -23,20 +22,29 @@
     <!-- Main content -->
     <main class="container mt-5">
         <div class="auth-form">
-            <h4>Вхід</h4>
+            <h4>Реєстрація</h4>
 
-            <!-- Вхідна форма -->
-            <form id="login-form" class="form-group">
+            <!-- Форма реєстрації -->
+            <form id="register-form" class="form-group">
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Введіть email" required>
+                    <label for="reg-name">Ім'я</label>
+                    <input type="text" class="form-control" id="reg-name" placeholder="Введіть ваше ім'я" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" placeholder="Введіть пароль" required>
+                    <label for="reg-email">Email</label>
+                    <input type="email" class="form-control" id="reg-email" placeholder="Введіть email" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Увійти</button>
-                <p class="mt-3">Ще не зареєстровані? <a href="register.html">Зареєструватися</a></p>
+                <div class="form-group">
+                    <label for="reg-password">Пароль</label>
+                    <input type="password" class="form-control" id="reg-password" placeholder="Введіть пароль" required>
+                </div>
+                <div class="form-group">
+                    <label for="reg-confirm-password">Підтвердження паролю</label>
+                    <input type="password" class="form-control" id="reg-confirm-password"
+                        placeholder="Підтвердіть пароль" required>
+                </div>
+                <button type="submit" class="btn btn-success">Зареєструватися</button>
+                <p class="mt-3">Вже є аккаунт? <a href="login.html">Увійти</a></p>
             </form>
 
             <!-- Місце для повідомлень -->
@@ -52,11 +60,7 @@
     <script src="model.js"></script>
     <script src="view.js"></script>
     <script src="controller.js"></script>
-    <script>
-        const view = new LoginView();
-        const model = UserModel;
-        new LoginController(view, model);
-    </script>
+
 </body>
 
 </html>
